--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,6 @@
+/* Load in your font */
+@import url('https://fonts.googleapis.com/css?family=Baloo+Chettan|Libre+Caslon+Text&display=swap');
+
 .App {
   text-align: center;
 }
